# TareaProcesos

./: CMakeLists.txt  main.c  miners.c
incl/cpu/: Collector_CPU_Minner.cpp  Collector_CPU_Minner.h
incl/disk/: Collector_Disk_Minner.cpp  Collector_Disk_Minner.h
incl/memory/: Collect_Memory_Minner.cpp  Collect_Memory_Minner.h
incl/network/: Collector_Network_Minner.cpp  Collector_Network_Minner.h
